# robovac

./: .coveragerc  .flake8  .gitignore  .markdownlint-cli2.yaml  .release-please-manifest.json  .tool-versions  CHANGELOG.md  CLAUDE.md  CONTRIBUTION.md  DEVELOPMENT.md  README.md  Taskfile.yaml  analyze_model_dps.py  codecov.yml  commit_msg.txt  docker-compose.yml  feature_list.json  lefthook.yml  mkdocs.yml  model_validator_cli.py  package-lock.json  package.json  progress.txt  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  setup.py  test_hash_coverage.py  zensical.toml
.devcontainer/: devcontainer.json
.github/: LABELS.md
.github/workflows/: ci.yml  docs.yml  main.yml  mutation.yml  release.yaml
.jules/: bolt.md  palette.md  sentinel.md
.windsurf/rules/: code-style-guide.md  markdown-hook.md  python-hooks.md  tooling.md
.windsurf/workflows/: address-pr-comments.md  coding-agent.md  create-github-pr.md  deploy-to-ha.md  improve.md  issue-fix.md  lazy-commit.md  revaluate-current-status.md  review-code.md
Taskfiles/: jq.yml
custom_components/robovac/: __init__.py  case_insensitive_lookup.py  config_flow.py  (+18 more)
docs/: BATTERY_LEVEL_DEPRECATION_FIX.md  FEATURE_TRACKING.md  ISSUE_29_ANALYSIS.md  ISSUE_29_COMMENT_3431949831_FINDINGS.md  ISSUE_29_FIX_PLAN.md  ISSUE_42_T2276_INVESTIGATION.md  PROTOCOL_35_SUPPORT.md  PROTOCOL_VERSION_ISSUE.md  PYTUYA_MIGRATION_PLAN.md  T2267_CONFIGURATION_ANALYSIS.md  T2320_CONFIGURATION_ANALYSIS.md  development.md  dps_codes.md  index.md  troubleshooting.md
features/: core_functionality.json  documentation.json  protocol_v35.json  t2251_status.json  testing.json  vacuum_models.json
proto-reference/: analysis.proto  app_device_info.proto  ble.proto  clean_param.proto  clean_record.proto  clean_record_wrap.proto  clean_statistics.proto  common.proto  consumable.proto  control.proto  debug.proto  error_code.proto  error_code_list_standard.proto  error_code_list_t2080.proto  error_code_list_t2265.proto  error_code_list_t2320.proto  keepalive.proto  map_edit.proto  map_manage.proto  media_manager.proto  multi_maps.proto  p2pdata.proto  scene.proto  socket.proto  station.proto  stream.proto  stream_wrap.proto  timing.proto  undisturbed.proto  unisetting.proto  universal_data.proto  upgrade.proto  version.proto  work_status.proto
scripts/: analyze_eufy_support_pdfs.py  cache_eufy_support_pdfs.py  mutate_model_mappings.py
site/: 404.html  index.html  sitemap.xml
site_docs/: adding-new-vacuum.md  configuration.md  index.md  installation.md  supported-models.md  troubleshooting.md
tests/: conftest.py  test_case_insensitive_lookup.py  test_config_flow.py  test_countries.py  test_errors.py  test_eufywebapi.py  test_integration_pr171.py  test_model_validator.py  test_model_validator_cli.py  test_mutate_model_mappings.py  test_options_flow.py  test_tuya_cipher.py  test_tuya_cipher_validate.py  test_tuyawebapi.py
(+477 files in other folders)
