[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robovac"
version = "2.4.3"
description = "Eufy RoboVac integration for Home Assistant"
readme = "README.md"
requires-python = ">=3.14.2"
license = {text = "Apache-2.0"}
authors = [
    {name = "Dan Webb", email = "dan.webb@damacus.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]

[tool.black]
line-length = 88
target-version = ["py314"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Ignore errors about missing stubs for external libraries
[[tool.mypy.overrides]]
module = [
    "voluptuous.*",
    "homeassistant.*",
    "numpy.*",
    "pytest_homeassistant_custom_component.*"
]
ignore_missing_imports = true

# Disable override check for config_flow.py
[[tool.mypy.overrides]]
module = "custom_components.robovac.config_flow"
disallow_subclassing_any = false
disable_error_code = ["override"]
strict_optional = false
check_untyped_defs = false

# Relax mypy rules for test files
[[tool.mypy.overrides]]
module = [
    "tests",
    "tests.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["custom_components"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.mutmut]
source_paths = ["custom_components/robovac"]
# mutmut 3 supports only_mutate; the old paths_to_mutate key was renamed to source_paths.
only_mutate = [
    "custom_components/robovac/robovac.py",
    "custom_components/robovac/vacuum.py",
    "custom_components/robovac/sensor.py",
    "custom_components/robovac/select.py",
    "custom_components/robovac/switch.py",
    "custom_components/robovac/proto_decode.py",
    "custom_components/robovac/case_insensitive_lookup.py",
    "custom_components/robovac/model_validator.py",
    "custom_components/robovac/vacuums/*",
]
pytest_add_cli_args_test_selection = [
    "tests/test_case_insensitive_lookup.py",
    "tests/test_model_validator.py",
    "tests/test_vacuum",
    "--ignore=tests/test_vacuum/test_protocol_35_cipher.py",
    "--ignore=tests/test_vacuum/test_protocol_35_message.py",
]
mutate_only_covered_lines = true
max_stack_depth = 8
timeout_multiplier = 10.0
